1.3vcli Xuixo

* ZigZag interpreter adding functionality to the console
	- show: Shows the flow built so far.

* ZigZag interpreter adding functionality to the console
	- license: Prints the University of Illinois/NCSA open source license.
	
* Added an ant script. It provides the following tasks:

	- compile
	- compile-tests
	- clean
	- run-tests
	- test-reports
	- javadoc
	- dist
	
	You should not run the Meandre server there. The dist task generates 4 standalone jars:
	
	- meandre-server-X.Y.jar (Meandre server)
	- zz-X.Y.jar (The ZigZag interpreter conole)
	- zzc-X.Y.jar (The ZigZag compiler)
	- zzre-X.Y.jar (The ZigZag runtime for MAU files)

* ZigZag interpreter adding functionality to the console
	- run     : Runs the current flow if possible
	
* ZigZag interpreter console providing the following system command
	 - desc   : Describe the requested component.
	 - help   : Prints the help. Type help [command] for deatiled help.
	 - load   : Load a ZigZag script into the interpreter.
	 - ls     : List information related to the ZigZag script built.
	 - reset  : Resets the current constructed flow.
	 - search : Searches for any component and flow that match the query.
	 - save   : Save the flow built so far.
	 - quit   : Quits the console (same as ctr+D).
	 - version: Prints the version information.
	
* Hooked the ZigZag console to the compiler

* Started the ZigZag interpreter console.
	- Uses JLine for terminal emulation

* Moved the ZigZag compiler and runner to used jar-based MAUs
 
* Refactoring of the core to avoid intertwined dependencies and static factories

1.2vcli Panellet:

* Modified the Mau code generator of the ZigZag compiler to produce parallel component creation
	- Supports AUTO parallelization
	- Supports unforced and forced order maintenance 

* Extension to the ZigZag grammar to allow parallelization of instances (ordered and unordered)

* Fix to the add remove location WS (remove the corruption of descriptions problem identified by Boris)
